FEAT US 0005 se agrega logica para crear un nuevo post (Cristian)